Fix for nginx build

--- a/docker/nginx/Dockerfile
+++ b/docker/nginx/Dockerfile
@@ -1,6 +1,6 @@
-FROM ubuntu:24.10
+FROM ubuntu:25.04
 
-ENV NGINX_VERSION 1.27.0
+ENV NGINX_VERSION 1.29.1
 ENV SRC_ROOT /usr/local/src
 ENV NGINX_HOME=/usr/local/nginx
 
@@ -15,7 +15,6 @@ ENV NGINX_HOME=/usr/local/nginx
 # RUN echo "deb http://archive.ubuntu.com/ubuntu/ impish multiverse" >> /etc/apt/sources.list \
 #     && echo "deb http://archive.ubuntu.com/ubuntu/ impish-updates multiverse" >> /etc/apt/sources.list \
 RUN apt-get update \
-    && apt-get upgrade -y \
     && apt-get install -y ca-certificates wget build-essential git-core libssl-dev libpcre3-dev zlib1g-dev libcap2-bin \
     && cd ${SRC_ROOT} \
     && wget -qO- http://nginx.org/download/nginx-${NGINX_VERSION}.tar.gz | tar -xz \
@@ -29,10 +28,11 @@ RUN apt-get update \
         --with-http_gzip_static_module \
     && make \
     && make install \
-    && apt-get -y remove --purge wget build-essential git-core pkg-config checkinstall \
+    && setcap 'cap_net_bind_service=+ep' ${NGINX_HOME}/sbin/nginx \
+    && apt-get -y remove --purge wget build-essential git-core || true \
     && apt-get -y autoremove \
-    && rm -rf /var/lib/apt/lists/* /var/tmp/* ${SRC_ROOT}/* \
-    && setcap 'cap_net_bind_service=+ep' ${NGINX_HOME}/sbin/nginx
+    && rm -rf /var/lib/apt/lists/* /var/cache/apt/archives/* /var/tmp/* ${SRC_ROOT}/*
+    
 
 VOLUME ["/var/cache/nginx"]
 
